force-app/main/default/objects/ApprovalPattern__c/ApprovalPattern__c.object-meta.xml
<CustomObject>
    <label>承認パターン</label>
    <nameField>
        <displayFormat>AP-{00000000}</displayFormat>
        <label>承認パターン名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>