force-app/main/default/objects/ApprovalPattern__c/fields/ApprovalRootType__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRootType__c</fullName>
    <inlineHelpText>この項目で、承認者が直列に並び、承認者全員の承認が必要となる「一人ずつ承認」ルート、もしくは、複数承認者のうち一人の承認が必要となる「複数人のうち一人が承認」ルートを選択いただけます。</inlineHelpText>
    <label>承認ルート種別</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Series</fullName>
                <label>一人ずつ承認</label>
            </value>
            <value>
                <fullName>Multiple</fullName>
                <label>複数人のうち一人が承認</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>