force-app/main/default/objects/ApprovalPattern__c/fields/Approver10__c.field-meta.xml
<CustomField>
    <fullName>Approver10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者10</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserApprover10</relationshipName>
    <type>Lookup</type>
</CustomField>