force-app/main/default/objects/ApprovalPattern__c/fields/Approver2__c.field-meta.xml
<CustomField>
    <fullName>Approver2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserApprover2</relationshipName>
    <type>Lookup</type>
</CustomField>