force-app/main/default/objects/ApprovalPattern__c/fields/Approver3__c.field-meta.xml
<CustomField>
    <fullName>Approver3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserApprover3</relationshipName>
    <type>Lookup</type>
</CustomField>