force-app/main/default/objects/ApprovalPattern__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>承認パターンコメント</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>