force-app/main/default/objects/ApprovalPattern__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>承認パターン種別</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>転居申請</fullName>
            </value>
            <value>
                <fullName>入居申請</fullName>
            </value>
            <value>
                <fullName>退去申請</fullName>
            </value>
            <value>
                <fullName>駐車場申請</fullName>
            </value>
            <value>
                <fullName>引越申請</fullName>
            </value>
            <value>
                <fullName>決裁申請</fullName>
            </value>
            <value>
                <fullName>リーガル申請</fullName>
            </value>
            <value>
                <fullName>作業手配依頼申請</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>